<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_bottom"
    app:startDestination="@id/navigation_conversion">

    <fragment
        android:id="@+id/navigation_conversion"
        android:name="com.example.currencyrates57.Conversion"
        android:label="@string/conversion_title"
        tools:layout="@layout/fragment_conversion" />
    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.currencyrates57.Graph"
        android:label="@string/graph_title"
        tools:layout="@layout/fragment_graph" />
    <fragment
        android:id="@+id/navigation_savings"
        android:name="com.example.currencyrates57.Savings"
        android:label="@string/savings_title"
        tools:layout="@layout/fragment_savings" />
    <fragment
        android:id="@+id/navigation_dynamic"
        android:name="com.example.currencyrates57.Dynamic"
        android:label="@string/dynamic_title"
        tools:layout="@layout/fragment_dynamic" />
</navigation>